[package]
name = "csp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
csp-common = { path = "../csp-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "csp"
path = "src/main.rs"
